--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.dlsu.mobapde.mobapdetugmenot.MainActivity">
+    android:orientation="vertical"
+    android:background="#017D19"
+    tools:context="edu.dlsu.mobapde.mobapdetugmenot.MainActivity"
+    android:gravity="center">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:layout_width="375dp"
+        android:layout_height="80dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/title"/>
+    <ImageButton
+        android:layout_width="200dp"
+        android:layout_height="80dp"
+        android:scaleType="centerCrop"
+        android:background="@null"
+        android:src="@drawable/onep"
+        android:id="@+id/ib_one"/>
+    <ImageButton
+        android:layout_width="200dp"
+        android:layout_height="80dp"
+        android:src="@drawable/twop"
+        android:scaleType="centerCrop"
+        android:background="@null"
+        android:id="@+id/ib_two"/>
+    <ImageButton
+        android:layout_width="200dp"
+        android:layout_height="80dp"
+        android:src="@drawable/tutorial"
+        android:background="@null"
+        android:scaleType="centerCrop"
+        android:id="@+id/ib_tutorial"/>
+    <ImageButton
+        android:layout_width="200dp"
+        android:layout_height="80dp"
+        android:src="@drawable/settings"
+        android:background="@null"
+        android:scaleType="centerCrop"
+        android:id="@+id/ib_settings"/>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
