--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -6,12 +6,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorPrimary"
     tools:context="edu.dlsu.mobapde.mobapdetugmenot.TutorialActivity">
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+        android:background="@null"
+        android:src="@drawable/back"
+        android:scaleType="centerCrop"
         android:id="@+id/ib_back"/>
+    <ImageView
+        android:layout_width="350dp"
+        android:layout_height="80dp"
+        android:src="@drawable/howtoplay"
+        android:scaleType="centerCrop"
+        android:layout_gravity="right"/>
 
 </LinearLayout>
