--- a/app/src/main/res/layout/activity_pause_dialog.xml
+++ b/app/src/main/res/layout/activity_pause_dialog.xml
@@ -1,9 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.dlsu.mobapde.mobapdetugmenot.PauseDialog">
+    android:orientation="vertical"
+    android:background="#017D19"
+    tools:context="edu.dlsu.mobapde.mobapdetugmenot.PauseDialog"
+    android:gravity="center">
 
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+        android:layout_width="375dp"
+        android:layout_height="80dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/paused"/>
+    <ImageButton
+        android:layout_width="200dp"
+        android:layout_height="80dp"
+        android:scaleType="centerCrop"
+        android:background="@null"
+        android:src="@drawable/cont"
+        android:id="@+id/ib_cont"/>
+    <ImageButton
+        android:layout_width="200dp"
+        android:layout_height="80dp"
+        android:src="@drawable/retry"
+        android:scaleType="centerCrop"
+        android:background="@null"
+        android:id="@+id/ib_retry"/>
+    <ImageButton
+        android:layout_width="200dp"
+        android:layout_height="80dp"
+        android:src="@drawable/quit"
+        android:background="@null"
+        android:scaleType="centerCrop"
+        android:id="@+id/ib_quit"/>
+</LinearLayout>
