--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -19,8 +19,7 @@
     <ImageView
         android:layout_width="350dp"
         android:layout_height="80dp"
-        android:background="@color/colorPrimaryDark"
-        android:src=""
+        android:src="@drawable/headersettings"
         android:scaleType="centerCrop"
         android:layout_gravity="right"/>
 
