--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,15 +20,15 @@
         android:layout_height="80dp"
         android:scaleType="centerCrop"
         android:background="@null"
-        android:src="@drawable/onep"
-        android:id="@+id/ib_one"/>
+        android:src="@drawable/play"
+        android:id="@+id/ib_play"/>
     <ImageButton
         android:layout_width="200dp"
         android:layout_height="80dp"
         android:src="@drawable/stats"
         android:scaleType="centerCrop"
         android:background="@null"
-        android:id="@+id/ib_two"/>
+        android:id="@+id/ib_stats"/>
     <ImageButton
         android:layout_width="200dp"
         android:layout_height="80dp"
