--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -18,7 +18,53 @@
     <ImageView
         android:layout_width="350dp"
         android:layout_height="80dp"
-        android:src="@null"
+        android:src="@drawable/statsheader"
         android:scaleType="centerCrop"
         android:layout_gravity="right"/>
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="15dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="WIN-LOSS RECORD:"
+            android:fontFamily="fonts/image_font"
+            android:textColor="#fff"
+            android:layout_marginRight="65dp"
+            android:textSize="20sp"
+            android:id="@+id/tv_wl"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0-0"
+            android:textColor="#fff"
+            android:textSize="25sp"
+            android:id="@+id/tv_record"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="15dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="FASTEST WIN TIME:"
+            android:textColor="#fff"
+            android:layout_marginRight="65dp"
+            android:textSize="20sp"
+            android:id="@+id/tv_fwt"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="30.15"
+            android:textColor="#fff"
+            android:textSize="17sp"
+            android:id="@+id/tv_time"/>
+
+    </LinearLayout>
+</LinearLayout>
